<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_recipe_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary">

        <include
            android:id="@+id/header"
            layout="@layout/material_header" />

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/image_of_the_recipe"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:src="@drawable/category_baked_goods" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_image_button"
            style="@style/tertiary_button_white"
            android:layout_marginEnd="@dimen/outline_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/change_image"
            app:layout_constraintBottom_toBottomOf="@id/recipe_image"
            app:layout_constraintEnd_toEndOf="@id/recipe_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/outline_horizontal"
            android:layout_marginTop="@dimen/default_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_image"
            app:layout_constraintWidth_percent="0.8">

            <TextView
                android:id="@+id/recipe_name_label"
                style="@style/label"
                android:labelFor="@id/recipe_name_field"
                android:text="@string/label_recipe_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/recipe_name_field"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:hint="@string/hint_recipe_name"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:maxLength="@integer/recipe_name_max_length"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_name_label" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_name_field">

                <TextView
                    android:id="@+id/recipe_category_label"
                    style="@style/label"
                    android:labelFor="@id/recipe_category_spinner"
                    android:text="@string/category"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/recipe_category_spinner"
                    style="@style/spinner"
                    android:layout_width="wrap_content"
                    android:spinnerMode="dropdown"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recipe_category_label" />

                <TextView
                    android:id="@+id/recipe_servings_label"
                    style="@style/label"
                    android:labelFor="@id/recipe_servings_field"
                    android:text="@string/label_recipe_servings"
                    app:layout_constraintStart_toStartOf="@id/recipe_servings_field"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/recipe_servings_field"
                    style="@style/edit_text"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/default_space"
                    android:hint="@string/hint_recipe_servings"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/recipe_category_spinner"
                    app:layout_constraintTop_toBottomOf="@id/recipe_servings_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/primary_button"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="@dimen/outline_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
