<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">RecipeMe</string>
    <string name="shopping_list">Einkaufsliste</string>
    <string name="profile">Profil</string>
    <string name="next">Weiter</string>
    <string name="back">Zurück</string>
    <string name="add">Hinzufügen</string>
    <string name="baked_goods">Backwaren</string>
    <string name="salads">Salate</string>
    <string name="main_dishes">Hauptspeisen</string>
    <string name="desserts">Desserts</string>
    <string name="soups">Suppen</string>
    <string name="snacks">Snacks</string>
    <string name="breakfast">Frühstück</string>
    <string name="beverages">Getränke</string>
    <string name="gram">g</string>
    <string name="milliliter">ml</string>
    <string name="teaspoon">TL</string>
    <string name="tablespoon">EL</string>
    <string name="centimeter">cm</string>
    <string name="package_sg">Packung</string>
    <string name="package_pl">Packungen</string>
    <string name="pack_sg">Päckchen</string>
    <string name="pack_pl">Päckchen</string>
    <string name="pinch_sg">Prise</string>
    <string name="pinch_pl">Prisen</string>
    <string name="slice_sg">Scheibe</string>
    <string name="slice_pl">Scheiben</string>
    <string name="dash_sg">Spritzer</string>
    <string name="dash_pl" tools:ignore="Typos">Spritzer</string>
    <string name="stick_sg" tools:ignore="Typos">Stange</string>
    <string name="stick_pl">Stangen</string>
    <string name="clove_sg">Zehe</string>
    <string name="clove_pl">Zehen</string>
    <string name="sprig_sg">Zweig</string>
    <string name="sprig_pl">Zweige</string>
    <string name="none_unit" translatable="false">---</string>
    <string name="label_recipe_name">Name des Rezepts</string>
    <string name="hint_recipe_name">z.B. Leckerer Hummus</string>
    <string name="category">Kategorie</string>
    <string name="new_recipe">Neues Rezept</string>
    <string name="desc_add_recipe">Rezept hinzufügen</string>
    <string name="delete">Löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete_recipe_message">Rezept wirklich löschen?</string>
    <string name="ingredients">Zutaten</string>
    <string name="serving">Portion</string>
    <string name="servings">Portionen</string>
    <string name="recipe_image">Rezept-Bild</string>
    <string name="desc_cook_recipe">Rezept kochen</string>
    <string name="steps">Schritte</string>
    <string name="add_to_shopping_list">Zur Einkaufsliste hinzufügen</string>
    <string name="decrease_servings">Portionen verringern</string>
    <string name="increase_servings">Portionen erhöhen</string>
    <string name="label_ingredient_name">Name der Zutat</string>
    <string name="hint_ingredient_name">z.B. Kichererbsen</string>
    <string name="hint_ingredient_quantity">z.B. 1,5</string>
    <string name="label_ingredient_quantity">Menge</string>
    <string name="label_ingredient_unit">Einheit</string>
    <string name="done">Fertig!</string>
    <string name="label_cooking_step">Beschreibung des Schrittes</string>
    <string name="hint_cooking_step">z.B. Zitronen halbieren und …</string>
    <string name="label_cooking_step_time">Timer-Zeit (optional)</string>
    <string name="hint_cooking_step_time">z.B. 90</string>
    <string name="second_sg">Sekunde</string>
    <string name="second_pl">Sekunden</string>
    <string name="minute_sg">Minute</string>
    <string name="hour_sg">Stunde</string>
    <string name="hour_pl">Stunden</string>
    <string name="minute_pl">Minuten</string>
    <string name="label_recipe_servings">Portionen</string>
    <string name="hint_recipe_servings">z.B. 2</string>
    <string name="err_enter_name">Namen eingeben</string>
    <string name="err_enter_servings">Portionen angeben</string>
    <string name="err_servings_greater_than_zero">Wert größer als 0 angeben</string>
    <string name="err_enter_description">Beschreibung angeben</string>
    <string name="can_sg">Dose</string>
    <string name="can_pl">Dosen</string>
    <string name="glas_sg">Glas</string>
    <string name="glas_pl">Gläser</string>
    <string name="new_ingredient">Neue Zutat</string>
    <string name="remove_checked_items">Markierte Elemente entfernen</string>
    <string name="err_enter_text">Text eingeben</string>
    <string name="store_link" translatable="false">http://play.google.com/store/apps/details?id=de.hs_rm.recipe_me</string>
    <string name="start_timer">Timer starten</string>
    <string name="cooking_steps">Koch-Schritte</string>
    <string name="add_cooking_steps_text">Füge über den Button Koch-Schritte hinzu.</string>
    <string name="add_ingredients_text">Füge über den Button Zutaten hinzu.</string>
    <string name="add_items_text">Nicht alle Zutaten zu Hause?\n\Füge hier oder aus der Rezept-Ansicht hinzu, was noch fehlt.</string>
    <string name="share">Teilen</string>
    <string name="add_recipe_text">Noch ziemlich leer hier.\n\Füge über den Button leckere Rezepte hinzu.</string>
    <string name="profile_greeting">Hallo, Chefkoch!</string>
    <string name="change_profile_picture">Profilbild ändern</string>
    <string name="site_notice">Impressum</string>
    <string name="recipe_total_text_1">Du hast bisher</string>
    <string name="photo_credits">Bildnachweis</string>
    <string name="beckbold" translatable="false">Beckbold Development</string>
    <string name="site_notice_text" translatable="false">Christina Becker, Marvin Laibold\n\beckbold.development@gmail.com</string>
    <string name="photo_credits_text" translatable="false">App icon uses icon made by monkik from www.flaticon.com\n\Chef icon made by Freepik from www.flaticon.com\n\Baked goods photo by Rebecca Matthews on Unsplash\n\Beverages photo by Kim Daniels on Unsplash\n\Breakfast photo by Dani Rendina on Unsplash\n\Cooking photo by Gaelle Marcel on Unsplash\n\Desserts photo by Jennifer Schmidt on Unsplash\n\Main dishes photo by Natalia Y on Unsplash\n\Salads photo by Hermes Rivera on Unsplash\n\Snacks photo by Kyle Brinker on Unsplash\n\Soups photo by Cayla1 on Unsplash</string>
    <string name="version">Version</string>
    <string name="recipe_total_text_map">{\"1\":\"Rezept erstellt - da geht noch mehr!\",\"10\":\"Rezepte erstellt - da geht noch mehr!\",\"20\":\"Rezepte erstellt - du bist auf einem guten Weg.\",\"30\":\"Rezepte erstellt - du kannst schon fast ein Restaurant aufmachen.\",\"40\":\"Rezepte erstellt - boah, Respekt!\",\"50\":\"Rezepte erstellt - deine Waage wollt\' ich nicht sein.\",\"60\":\"Rezepte erstellt - wer soll das alles essen? Sag mal!\",\"61\":\"Rezepte erstellt - du bist ein wahrer Meisterkoch!\"}</string>
    <string name="recipe_of_the_day">Rezept des Tages</string>
    <string name="open">Öffnen</string>
    <string name="no_recipe_otd">Füge Rezepte hinzu, um dich hier täglich neu inspirieren zu lassen.</string>
    <string name="edit_recipe">Rezept bearbeiten</string>
    <string name="err_recipe_not_found">Fehler: Rezept konnte nicht gefunden werden.</string>
    <string name="add_cooking_step_select_ingredients">Wähle alle Zutaten aus, die in diesem Schritt benötigt werden.</string>
    <string name="save">Speichern</string>
    <string name="add_via_button">Über Button hinzufügen</string>
    <string name="cancel_reset">Abbrechen und zurücksetzen</string>
    <string name="edit_assigned_ingredients">Zugehörige Zutaten bearbeiten</string>
    <string name="related_ingredients">Zugehörige Zutaten</string>
    <string name="recipes">Rezepte</string>
    <string name="update">Aktualisieren</string>
    <string name="your_name">Dein Name</string>
    <string name="shopping_list_export_headline">Sieh, was auf %s RecipeMe-Einkaufsliste steht:\n\n</string>
    <string name="my">meiner</string>
    <string name="profile_greeting_name">Hallo, %s!</string>
    <string name="profile_picture">Profilbild</string>
    <string name="file_provider" translatable="false">com.kroegerama.imgpicker.demo.fileprovider</string>
    <string name="image_of_the_recipe">Bild des Rezepts</string>
    <string name="change_image">Bild ändern</string>
    <string name="pick_single">Wähle ein Bild aus</string>
    <string name="cup_sg">Tasse</string>
    <string name="cup_pl">Tassen</string>
    <string name="add_cooking_step">Schritt hinzufügen</string>
    <string name="edit_cooking_step">Schritt bearbeiten</string>
    <string name="delete_cooking_step">Schritt löschen</string>
    <string name="add_ingredient">Zutat hinzufügen</string>
    <string name="edit_ingredient">Zutat bearbeiten</string>
    <string name="delete_ingredient">Zutat löschen</string>
    <string name="set_timer">Timer starten</string>
    <string name="delete_recipe">Rezept löschen</string>
    <string name="edit_profile">Profil bearbeiten</string>
    <string name="to_site_notice">Zum Impressum</string>
    <string name="category_picture">Kategorie-Bild</string>
    <string name="rotd_picture">Rezept des Tages-Bild</string>
    <string name="check_items_to_be_removed">Markiere zu entfernende Elemente.</string>
    <string name="settings">Einstellungen</string>
    <string name="to_settings">Zu den Einstellungen</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light">Hell</string>
    <string name="dark">Dunkel</string>
    <string name="system_settings">Systemeinstellung</string>
    <string name="start_timer_in_background">Timer im Hintergrund starten</string>
    <string name="timer_started">Timer gestartet</string>
    <string name="show_cooking_steps_preview">Vorschau für Koch-Schritte anzeigen</string>
    <string name="save_data">Daten sichern</string>
    <string name="restore_data">Daten wiederherstellen</string>
    <string name="invalid_file">Ungültige Datei</string>
    <string name="error_exporting_backup">Fehler beim Exportieren der Daten</string>
    <string name="error_importing_backup">Fehler beim Importieren der Daten</string>
    <string name="choose_destination">Ziel auswählen</string>
    <string name="select">Auswählen</string>
    <string name="saved_data_successfully">Daten erfolgreich gesichert</string>
    <string name="invalid_file_path">Ungültiger Dateipfad</string>
    <string name="imported_data_success">Daten erfolgreich importiert</string>
    <string name="select_file">Datei auswählen</string>
    <string name="data_reset_warning">Vor dem Importieren werden alle Daten in der App zurückgesetzt!</string>
    <string name="reset_data_and_restore">App zurücksetzen und wiederherstellen</string>
    <string name="backup">Datensicherung</string>
</resources>
