<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="headlineText"
            type="String" />
    </data>

    <TextView
        android:id="@+id/headline"
        style="@style/headline_image_1"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:hyphenationFrequency="full"
        android:breakStrategy="simple"
        android:minHeight="@dimen/header_min_height"
        android:paddingHorizontal="@dimen/outline_horizontal"
        android:paddingTop="@dimen/space_top"
        android:paddingBottom="@dimen/space_top"
        android:text="@{headlineText}"
        app:layout_constraintTop_toTopOf="parent"
        tools:maxLength="14"
        tools:text="@tools:sample/lorem/random" />

</layout>
